--- a/fe-richfaces/src/main/webapp/css/addressbook.css
+++ b/fe-richfaces/src/main/webapp/css/addressbook.css
@@ -6,8 +6,7 @@
         Purpose of the stylesheet follows.
 */
 
-/* 
-   TODO customize this sample style
+/*
    Syntax recommendation http://www.w3.org/TR/REC-CSS2/
 */
 
@@ -23,7 +22,7 @@ body, h2, h3 {
     font-size: 12px;
     font-weight: bold;
     font-variant: small-caps;
-    margin: 0px 10px;
+    margin: 0 10px;
     padding: 5px;
 }
 
@@ -41,17 +40,14 @@ body, h2, h3 {
 }
 
 .image {
-    border-style: solid;
-    border-width: 1px;
-    border-color: #CCD9E4;
+    border: 1px solid #CCD9E4;
 }
 
 .error {
     background-color: #C0402A;
     padding: 10px;
     text-align: center;
-    border-style: solid;
-    border-color: #FFFFFF;
+    border: solid #FFFFFF;
 }
 
 .mensajeError {
